# jellyx-player

./: .gitignore  ARCHITECTURE.md  AUTHORS.md  CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.es.md  README.md  package-lock.json  pnpm-lock.yaml
.atl/: .skill-registry.cache.json  skill-registry.md
.github/: cla-signers.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cla.yml  macos-dmg.yml  release-recovery.yml  release.yml  validate-candidate.yml  windows-msi.yml  windows.yml
assets/brand/: HelixIcon.svelte  README.md  design-tokens.json  theme.css
assets/brand/jellyx_brand_assets/: JellyxIcon.svelte  README.md  design-tokens.json  theme.css
docs/: ARCHITECTURE.md  BUILDING.md  ENGINEERING-PROCESS.md  PLATFORM.md  PRD.md  UI_DESIGN.md  code-signing.md  latest.json  operations.md  packaging.md  release-conventions.md  screenshots.md
docs/promotion/: launch-plan.md
helix-cli/: Cargo.toml
helix-cli/src/: main.rs
helix-core/: Cargo.toml
helix-core/src/: lib.rs
helix-core/src/models/: track.rs
helix-desktop/: Cargo.toml  tauri.conf.json
helix-desktop/capabilities/: main.json
helix-desktop/src/: lib.rs
helix-desktop/src/app/: setup.rs
helix-desktop/src/audio/: mod.rs  output.rs
helix-desktop/src/errors/: mod.rs  types.rs
helix-desktop/src/ipc/: commands.rs  dto.rs
helix-desktop/src/models/: artist.rs  source.rs
helix-desktop/src/persistence/: db.rs  models.rs
helix-desktop/src/playback/: events.rs  mod.rs  service.rs  state.rs
helix-desktop/src/sources/: mod.rs  youtube.rs  yt_dlp.rs
helix-desktop/src/updater/: checker.rs  service.rs
helix-desktop/src/visualizer/: mod.rs
helix-desktop/tests/: workspace_structure_approval.rs
helix-ffi/: Cargo.toml
helix-ffi/src/: lib.rs
imagen/: README-INTEGRACION-SVELTE.md  helix_design_tokens.json
jellyx-cli/: Cargo.toml
jellyx-cli/src/: main.rs
jellyx-core/: Cargo.toml
jellyx-core/src/: lib.rs
jellyx-core/src/models/: album.rs  playlist.rs
jellyx-core/src/shared/: utils.rs
jellyx-desktop/: Cargo.toml  build.rs  tauri.conf.json
jellyx-desktop/capabilities/: main.json
jellyx-desktop/icons/: icon.icns
jellyx-desktop/src/: lib.rs  main.rs  observability.rs
jellyx-desktop/src/app/: mod.rs  setup.rs
jellyx-desktop/src/audio/: decoder.rs  fft.rs  http_stream.rs  output.rs  pipeline.rs
jellyx-desktop/src/errors/: types.rs
jellyx-desktop/src/ipc/: commands.rs  dto.rs
jellyx-desktop/src/persistence/: db.rs  mod.rs  models.rs
jellyx-desktop/src/playback/: events.rs  proxy.rs  service.rs  state.rs
jellyx-desktop/src/sources/: mod.rs  youtube.rs  yt_dlp.rs
jellyx-desktop/src/updater/: channel.rs  checker.rs  manifest.rs  prefs.rs  service.rs
jellyx-desktop/src/visualizer/: fft_bridge.rs
jellyx-desktop/tests/: album_art_extraction.rs  workspace_structure_approval.rs
jellyx-ffi/: Cargo.toml
jellyx-ffi/src/: lib.rs
openspec/: config.yaml
openspec/changes/artist-album-detail-views/: tasks.md
openspec/changes/binary-ipc-fft/: design.md  exploration.md  proposal.md  spec.md  tasks.md
openspec/changes/error-handling-ui/: design.md  explore.md  proposal.md  tasks.md  verify-report.md
openspec/changes/frontend-restructure/: design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/home-recommendations/: design.md  explore.md  proposal.md  tasks.md
openspec/changes/ipc-bridge/: design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/library-persistence/: design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/local-scanner/: tasks.md
openspec/changes/models-and-errors/: design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/playback-engine/: design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/playback-fixes/: design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/scaffold-restructure/: design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/source-resolvers/: design.md  exploration.md  proposal.md  tasks.md  verify-report.md
openspec/changes/visualizer-frontend/: design.md  (+3 more)
packaging/aur/: NOTES.md  PKGBUILD  helix-player.install  jellyx-player.install
packaging/flatpak/: SUBMISSION.md  cargo-sources.json  com.helix.music.desktop  com.helix.music.metainfo.xml  com.helix.music.yml  com.jellyx.music.desktop  com.jellyx.music.metainfo.xml  com.jellyx.music.yml
packaging/homebrew/: NOTES.md
packaging/winget/: NOTES.md
scripts/: build-appimage.sh  build.sh  generate-release-body.sh  generate-windows-icons.py  inspect-msi.ps1  prepare-sentry-dsn.py  test-candidate-validation-workflow.py  test-release-workflow.py  test-windows-icons.py  validate-rebrand.sh  validate-release.sh  verify-sentry-dsn-boundary.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: mod.rs  setup.rs
src-tauri/src/audio/: decoder.rs  fft.rs  http_stream.rs  mod.rs  output.rs  pipeline.rs  playback.rs
src-tauri/src/errors/: mod.rs  types.rs
src-tauri/src/ipc/: commands.rs  dto.rs  events.rs  mod.rs
src-tauri/src/models/: album.rs  artist.rs  mod.rs  source.rs  track.rs
src-tauri/src/persistence/: db.rs  mod.rs  models.rs
src-tauri/src/playback/: events.rs  mod.rs  models.rs  proxy.rs  service.rs  state.rs
src-tauri/src/plugins/: mod.rs  runtime.rs
src-tauri/src/shared/: mod.rs  utils.rs
src-tauri/src/sources/: mod.rs  youtube.rs  yt_dlp.rs
src-tauri/src/sources/local/: mod.rs  resolver.rs  scanner.rs
src-tauri/src/sources/soundcloud/: mod.rs
src-tauri/src/updater/: channel.rs  manifest.rs  mod.rs  prefs.rs  service.rs
src-tauri/src/visualizer/: fft_bridge.rs  mod.rs  renderer.rs
src-tauri/tests/: album_art_extraction.rs
ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
ui/src/: App.svelte  main.ts  svelte.d.ts
(+230 files in other folders)
