[workspace]
resolver = "2"
members = ["jellyx-desktop", "jellyx-core", "jellyx-cli", "jellyx-ffi"]

[workspace.package]
version = "0.4.1"
edition = "2024"
license = "AGPL-3.0"

# Shared workspace dependencies.
# Member crates reference these via `dependency = { workspace = true }`.
# Only Tauri-free, broadly-shared crates belong here; desktop-only deps stay
# declared in `jellyx-desktop/Cargo.toml`. Populated incrementally as crates
# are introduced (jellyx-core in PR 2, extraction in PR 3).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rusqlite = { version = "0.31", features = ["backup", "bundled"] }
serial_test = "3"
