[package]
name = "helix-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure, Tauri-free Helix domain logic shared by all consumers."

[lib]
name = "helix_core"
crate-type = ["lib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }