[package]
name = "helix-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Foreign Function Interface skeleton for Helix (UniFFI scaffolding initialized)."

[lib]
name = "helix_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
helix-core = { path = "../helix-core" }
# UniFFI for proc-macro-based FFI scaffolding (original user acceptance
# criterion). Proc-macro-only path — no build.rs or UDL required for the
# `setup_scaffolding!()` macro to compile.
uniffi = "0.32"