[package]
name = "jellyx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure, Tauri-free Jellyx domain logic shared by all consumers."

[lib]
name = "jellyx_core"
crate-type = ["lib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
rusqlite = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[dev-dependencies]
serial_test = { workspace = true }
