[package]
name = "helix"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "A privacy-first, open-source music platform."

[lib]
name = "helix_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = "0.5"
symphonia-core = "0.5"
symphonia-format-mp3 = "0.5"
symphonia-format-flac = "0.5"
symphonia-format-ogg = "0.5"
symphonia-codec-vorbis = "0.5"
symphonia-codec-aac = "0.5"
cpal = "0.15"
rustfft = "6"
wgpu = "22"
wasmtime = "19"
