[package]
name = "helix"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "A privacy-first, open-source music platform."

[lib]
name = "helix_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset", "test"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = "0.6"
symphonia-core = "0.6"
symphonia-bundle-mp3 = "0.6"
symphonia-bundle-flac = "0.6"
symphonia-codec-vorbis = "0.6"
symphonia-codec-aac = "0.6"
cpal = "0.15"
crossbeam-channel = "0.5"
rustfft = "6"
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
walkdir = "2"
tauri-plugin-dialog = "2"
rand = "0.8"
sha2 = "0.10"
